src/test/deca/context/invalid/decl_method_type_of_arguments.deca
// Test of the rule (2.7) : the new method does not take the same
// parameters as the original method

class A  {
    void displayHello(int x){
        println(x);
    }
}

class B extends A  {
    void displayHello(float b){
        println(b);
    }
}




// Resultat:
//# src/test/deca/context/invalid/decl_method_type_of_arguments.deca:11:4: Redéfinition de méthode invalide : rule 2.7
